# legal-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: azure-static-web-apps-red-field-0d871480f.yml  build-backend.yml
app/: gradio_app.py
backend/: config.py  db.py  deps.py  main.py  models.py
backend/routers/: chat.py  corpus.py  threads.py  trace.py
backend/services/: blob_loader.py  chat_service.py  company_aliases.py  corpus_service.py  sse.py
backend/tests/: test_chat_stream.py  test_corpus_router.py  test_sse_encoder.py  test_threads_router.py
data/eval/: HOW_TO_LABEL.md  eval_queries.json  eval_results.json
docs/: SEC_10K_QA_Project_Spec.md  SPARK_SETUP.md
docs/plans/: 2026-05-17-sec-10k-qa.md
docs/specs/: 2026-05-17-sec-10k-qa-design.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useCorpus.ts  useTheme.ts  useThreads.ts
frontend/src/lib/: api.ts  sse.ts  types.ts
frontend/src/runtime/: ChatThreadContext.tsx  (+2 more)
infra/: deploy-app.sh  deploy.sh  upload-index.sh
scripts/: build_index.py  run_eval.py
src/: chunk.py  config.py  embed.py  evaluate.py  generate.py  index.py  ingest.py  pipeline.py  preprocess.py  rerank.py  retrieve.py  spark_embed.py
tests/: test_chunk.py  test_embed.py  test_evaluate.py  test_generate.py  test_index.py  test_ingest.py  test_pipeline.py  test_rerank.py  test_retrieve.py  test_spark_embed.py
(+36 files in other folders)
